RESOLVED FIXED280888
REGRESSION(282394@main): Flaky ASSERTION FAILED: !users.contains(pageID) on TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations
https://bugs.webkit.org/show_bug.cgi?id=280888
Summary REGRESSION(282394@main): Flaky ASSERTION FAILED: !users.contains(pageID) on T...
Chris Dumez
Reported 2024-10-04 07:19:37 PDT
ASSERTION FAILED: !users.contains(pageID) on TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations since 282394@main.
Attachments
Chris Dumez
Comment 1 2024-10-04 07:19:45 PDT
Chris Dumez
Comment 2 2024-10-04 07:26:08 PDT
Alex Christensen
Comment 3 2024-10-04 13:47:18 PDT
EWS
Comment 4 2024-10-04 18:24:55 PDT
Committed 284719@main (9635c3817243): <https://commits.webkit.org/284719@main> Reviewed commits have been landed. Closing PR #34713 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.